[project]
name = "sqlglot_api"
version = "0.1.0"
description = "SQLglot API"
authors = [
    {name = "Christophe Oudar", email = "kayrnt@gmail.com"},
]
dependencies = [
    "flask>=3.1.0",
    "sqlglot",
    "gunicorn>=21.2.0",
]
requires-python = ">=3.11"

[dependency-groups]
dev = [
 "pytest>=8.3.4",
]
lint = [
    "ruff"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
packages = ["sqlglot_api"]